# CyberDropDownloader

./: .git-blame-ignore-revs  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  README.md  SECURITY.md  pyproject.toml  tox.ini
.github/: FUNDING.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  new_site_request.yml
.github/workflows/: GH_release.yaml  ci.yaml  ffmpeg.yaml  release.yml  ruff.yaml  typecheck.yaml
.zed/: debug.json  settings.json
cyberdrop_dl/: __init__.py  __main__.py  aio.py  cache.py  cli.py  compat.py  constants.py  cookies.py  csv_logs.py  ddos_guard.py  dedupe.py  director.py  env.py  exceptions.py  ffmpeg.py  hasher.py  logs.py  main.py  manager.py  mediaprops.py  multi_process.py  plugins.py  program_ui.py  prompts.py  scrape_mapper.py  scrape_source.py  signature.py  sorter.py  stats.py  storage.py  supported_sites.py  tracebacks.py  updates.py  url_objects.py  webhook.py  yaml.py
cyberdrop_dl/cli/: __init__.py  clean_up.py  compat.py  database.py  download.py  hash.py  main.py  show.py
cyberdrop_dl/clients/: __init__.py  client.py  download_client.py  downloads.py  etag.py  flaresolverr.py  hash_client.py  http.py  jdownloader.py  request.py  response.py  scraper_client.py  tcp.py
cyberdrop_dl/commands/: __init__.py  _compat.py  cache.py  clean_up.py  cleanup.py  config.py  database.py  hash.py  report.py  retry.py  scrape.py
cyberdrop_dl/config/: __init__.py  _common.py  _global.py  appdata.py  auth.py  auth_model.py  config_model.py  crawlers.py  default.json  default.yaml  filters.py  global_model.py  merge.py  schema.json  settings.py
cyberdrop_dl/config_definitions/: authentication_settings.py
cyberdrop_dl/crawlers/: __init__.py  _chevereto.py  _chibisafe.py  _fluid_player.py  _forum.py  _hls.py  _kvs.py  _one_manager.py  _tubecorporate.py  _xfs.py  _yetishare.py  abstream.py  acast.py  adobe_lightroom.py  anontransfer.py  anysex.py  apkmirror.py  archive_org.py  archivebate.py  ashemaletube.py  bandcamp.py  beeg.py  box_dot_com.py  bunkr.py  bunkr_albums.py  bunkr_albums_io.py  bunkrr.py  bunkrr_albums_io.py  buzzheavier.py  camwhores_dot_tv.py  cara_app.py  catbox.py  cloud_mail_ru.py  cloudflare_stream.py  clyp_it.py  coomer.py  coomerfans.py  crawler.py  crazyshit.py  cyberdrop.py  (+157 more)
cyberdrop_dl/crawlers/discourse/: __init__.py  _discourse.py  models.py  plex_tv.py
cyberdrop_dl/crawlers/invision/: __init__.py  bellazon.py
cyberdrop_dl/crawlers/kemono/: api.py  kemono.py  models.py  pawchive.py
cyberdrop_dl/crawlers/tubecorporate/: __init__.py  fuxxx.py  hclips.py  hdzog.py  hotmovs.py  inporn.py  tubepornclassic.py  txxx.py  upornia.py  vjav.py  voyeurhit.py  vxxx.py  xmilf.py
cyberdrop_dl/crawlers/vbulletin/: __init__.py  _vbulletin.py  vipergirls.py
cyberdrop_dl/crawlers/wordpress/: __init__.py  _wordpress.py  bestprettygirl.py  everia.py  models.py
cyberdrop_dl/crawlers/xenforo/: __init__.py  allporncomix.py  celebforum.py  f95zone.py  leakedmodels.py  nudostar.py  simpcity.py  socialmediagirls.py  titsintops.py  xbunker.py  xenforo.py
cyberdrop_dl/data_structures/: mediaprops.py  url_objects.py
cyberdrop_dl/database/: __init__.py  _db.py  common.py  definitions.py  hash.py  history.py  schema.py  table.py  transfer.py
cyberdrop_dl/database/tables/: __init__.py  definitions.py  hash.py  (+2 more)
cyberdrop_dl/dependencies/: __init__.py
cyberdrop_dl/downloader/: downloader.py  hls.py  http.py  mega_nz.py
cyberdrop_dl/managers/: cache_manager.py  client_manager.py  config_manager.py  live_manager.py  log_manager.py  logs.py  manager.py  path_manager.py  progress_manager.py  storage_manager.py
cyberdrop_dl/models/: __init__.py  types.py  validators.py
cyberdrop_dl/progress/: __init__.py  dedupe.py  hashing.py  overflow.py  sorting.py
cyberdrop_dl/scraper/: __init__.py  crawler.py  filters.py  jdownloader.py  scrape_mapper.py  scraper.py
cyberdrop_dl/storage/: __init__.py  _psutil.py
cyberdrop_dl/ui/: program_ui.py  ui.py
cyberdrop_dl/utils/: __init__.py  _dataclasses.py  _errors.py  _path_traverse.py  _url.py  aio.py  apprise.py  args.py  cleanup.py  cookie_management.py  css.py  dataclass.py  dates.py  errors.py  ffmpeg.py  filepath.py  js_unpacker.py  json.py  logger.py  m3u8.py  markdown.py  next_js.py  nuxt.py  open_graph.py  serialization.py  sorting.py  text_editor.py  utilities.py  webdav.py  webhook.py
docs/: README.md  SUMMARY.md  frequently-asked-questions.md  migration-to-cyberdrop-dl-patched.md  simpcity-support-dropped.md  upgrade.md
docs/getting-started/: README.md  cyberdrop-dl-install.md  cyberdrop-dl-on-android.md
docs/reference/: cli-arguments.md  notifications.md  supported-websites.md
scripts/release/: android_install.sh  android_remove.sh  install_android.sh  linux-macOS_install.sh  linux-macOS_remove.sh  linux-macOS_run.sh  start_linux.sh  start_macOS.command  start_windows.bat  windows_install.bat  windows_remove.bat  windows_run.bat
scripts/tools/: filter_logs.py  find_subclasses.py  generate_tui_preview.py  make_test_cases.py  ping.py  update_docs.py
tests/: conftest.py  quick_test.sh  test_aio.py  test_apprise.py  test_cache.py  test_cleanup.py  test_cli.py  test_client.py  test_config.py  test_cookies.py  test_css.py  test_csv_logs.py  test_database.py  test_date_parser.py  test_ddos_guard.py  test_dedupe.py  test_dns_resolver.py  test_download_client.py  test_downloader.py  test_etags.py  test_ffmpeg.py  test_filename_safeguards.py  test_flaresolverr.py  test_flaresolverr_response.py  test_hashing.py  test_hls.py  test_json.py  test_logger.py  test_m3u8.py  test_manager.py  test_markdown.py  test_models.py  test_nextjs.py  test_path_traverse.py  test_progress.py  test_rate_limiter.py  test_real_debrid.py  test_request.py  test_response.py  test_scrape_mapper.py  (+12 more)
tests/crawlers/: test_archive_org.py  test_bunkr.py  test_crawlers.py  test_eporner.py  test_goonbox.py  test_hitomi.py  test_jpg5.py  test_onefichier.py  test_pawchive.py  test_vbulletin.py  test_xenforo.py  test_xhamster.py
tests/next_js/: nextjsv13.html  test_next_js.py
(+215 files in other folders)
