[project]
name = "cyberdrop-dl-patched"
authors = [{name = "Jacob B", email = "admin@script-ware.net"}]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Framework :: AsyncIO",
    "Intended Audience :: Developers",
    "Intended Audience :: End Users/Desktop",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14"
]
dependencies = [
    "aiodns >=4.0.0; sys_platform != 'android' and sys_platform != 'win32'",
    "aiohttp >=3.13.5",
    "aiolimiter >=1.2.1",
    "aiosqlite>=0.22.1",
    "async-mega-py >=2.3.1",
    "backports.zstd; platform_python_implementation == 'CPython' and python_version < '3.14'",
    "beautifulsoup4 >=4.14.3",
    "brotli; implementation_name=='cpython' and sys_platform!='ios'",
    "brotlicffi; implementation_name!='cpython' and sys_platform!='ios'",
    "certifi >=2026.4.22",
    "curl-cffi >=0.15; implementation_name == 'cpython' ",
    "cyclopts>=4.11.0",
    "imagesize >=2.0.0",
    "inquirer>=3.4.1",
    "jeepney >=0.9.0; 'bsd' in sys_platform or sys_platform == 'linux'",
    "m3u8 >=6.0.0",
    "myjdapi >=1.1.10",
    "propcache >=0.4.1",
    "psutil >=7.2.1; sys_platform != 'android'",
    "pycryptodome >=3.23.0",
    "pydantic >=2.13.1",
    "pyyaml >=6.0.3",
    "readchar >= 4.2.2",
    "rich >=15.0.0",
    "send2trash >=2.0.0",
    "truststore >=0.10.4",
    "xxhash >=3.7.0",
    "yarl >=1.23.0"
]
description = "Bulk downloader for multiple file hosts"
keywords = ["asyncio", "bunkr", "cyberdrop", "downloader", "mega.nz"]
license = "GPL-3.0-only"
license-files = ["LICENSE"]
maintainers = [{name = "NTFSvolume", email = "NTFSvolume@proton.me"}]
readme = "README.md"
requires-python = ">=3.11"
version = "9.4.2"

[project.optional-dependencies]
apprise = [
    "apprise >=1.10.0",
    'pywin32>=311; platform_system == "Windows"',
    'tzdata>=2025.3; platform_system == "Windows"'
]

[project.scripts]
cyberdrop-dl = "cyberdrop_dl.__main__:main"
cyberdrop-dl-patched = "cyberdrop_dl.__main__:main"

[project.urls]
Changelog = "https://github.com/Cyberdrop-DL/cyberdrop-dl/blob/main/CHANGELOG.md"
Funding = 'https://github.com/sponsors/jbsparrow'
Issues = "https://github.com/Cyberdrop-DL/cyberdrop-dl/issues"
Repository = "https://github.com/Cyberdrop-DL/cyberdrop-dl"

[build-system]
build-backend = "uv_build"
requires = ["uv_build<=0.10.11"]

[dependency-groups]
dev = [
    "prek>=0.3.9",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.1.0",
    "pytest>=9.0.3",
    "ruff==0.15.6",
    "tox>=4.53.0"
]

[tool.basedpyright]
ignore = ["cyberdrop_dl/dependencies/browser_cookie3.py"]
include = ["cyberdrop_dl", "scripts", "tests"]
reportExplicitAny = false
reportImplicitOverride = "hint"
reportImplicitStringConcatenation = false
reportImportCycles = "warning"
reportUnreachable = "hint"
reportUnusedCallResult = false
typeCheckingMode = "recommended"

[tool.coverage.report]
exclude_also = [
    '@(abc\.)?abstractmethod',
    'class .*\bProtocol\):',
    'if __name__ == .__main__.:',
    'if TYPE_CHECKING:'
]

[tool.coverage.run]
omit = [
    "cyberdrop_dl/crawlers/*",
    "tests/*"
]

[tool.pytest.ini_options]
addopts = ["-s"]
asyncio_default_fixture_loop_scope = "session"
asyncio_default_test_loop_scope = "session"
asyncio_mode = "auto"
filterwarnings = [
    "error"
]
markers = [
    "crawler_test_case: tests that do full run with a crawler (making actual network requests)"
]
minversion = "8.4.1"

[tool.ruff]
exclude = ["cyberdrop_dl/dependencies/browser_cookie3.py"]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = [
    "ASYNC",  # async calls that do not await anything or use blocking methods
    "B",  # flake8-bugbear
    "C4",  # flake8-comprehensions
    "COM8",  # flake8-commas linter
    "E",  # pycodestyle errors
    "F",  # pyflakes
    "FA102",  # future annotations
    "FURB188",  # slice-to-remove-prefix-or-suffix
    "I",  # isort
    "N",  # PEP8 naming conventions
    "PLR1716",  # boolean chained comparison
    "PTH",  # use pathlib instead of os
    "Q",  # flake8-quotes
    "RUF",  # RUF specific fixes
    "T20",  # flake8-print
    "TC",  # flake8-type-checking
    "TID",  # flake8-tidy-imports
    "UP",  # pyupgrade
    "W"  # pycodestyle warnings
]
extend-safe-fixes = [
    "TC"  # move import from and to TYPE_CHECKING blocks
]
ignore = [
    "COM812",  # missing-trailing-comma
    "E501",  # suppress line-too-long, let formatter decide
    "N806"  # uppercase variables in functions
]
unfixable = [
    "ERA"  # do not autoremove commented out code
]

[tool.ruff.lint.per-file-ignores]
"**/{tests,docs}/*" = [
    "E402",  # imports not at the top of the file.
    "T20"  # flake8-print
]
"__init__.py" = ["E402"]  # imports not at the top of the file.

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.tomlsort]
all = true
ignore_case = true
in_place = true
sort_first = ["name", "project", "select"]
spaces_before_inline_comment = 2
spaces_indent_inline_array = 4

[tool.uv]

[tool.uv.build-backend]
module-name = ["cyberdrop_dl"]
module-root = ""
source-include = ["CHANGELOG.md"]
