[project]
name = "cyberdrop-dl-patched"
authors = [{name = "Jacob B", email = "admin@script-ware.net"}]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Framework :: AsyncIO",
    "Intended Audience :: Developers",
    "Intended Audience :: End Users/Desktop",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14"
]
dependencies = [
    "aiodns >=4.0.4; sys_platform != 'android' and sys_platform != 'win32'",
    "aiohttp >=3.13.5",
    "aiolimiter >=1.2.1",
    "aiosqlite>=0.22.1",
    "async-mega-py >=2.4.1",
    "backports.zstd >=1.5.0; implementation_name=='cpython' and python_version < '3.14'",
    "beautifulsoup4 >=4.14.3",
    "brotli >=1.2.0; implementation_name=='cpython' and sys_platform!='ios'",
    "certifi >=2026.5.20",
    "curl-cffi >=0.15; implementation_name == 'cpython' ",
    "cyclopts>=4.16.1",
    "idna>=3.16",
    "imagesize >=2.0.0",
    "inquirer>=3.4.1",
    "jeepney >=0.9.0; 'bsd' in sys_platform or sys_platform == 'linux'",
    "m3u8 >=6.0.0",
    "myjdapi >=1.1.10",
    "propcache >=0.5.2",
    "psutil >=7.2.1; sys_platform != 'android'",
    "pycryptodome >=3.23.0",
    "pydantic == 2.13.4",
    "pyyaml >=6.0.3",
    "readchar >= 4.2.2",
    "rich >=15.0.0",
    "rich-rst>=2.0.1",
    "send2trash >=2.0.0",
    "truststore >=0.10.4",
    "typing-extensions>=4.15.0",
    "urllib3>=2.7.0",  # Transient dep with CVE
    "xxhash >=3.7.0",
    "yarl >=1.24.2"
]
description = "Bulk downloader for multiple file hosts"
keywords = ["asyncio", "bunkr", "cyberdrop", "downloader", "mega.nz"]
license = "GPL-3.0-only"
license-files = ["LICENSE"]
maintainers = [{name = "NTFSvolume", email = "NTFSvolume@proton.me"}]
readme = "README.md"
requires-python = ">=3.11"
version = "9.12.0"

[project.optional-dependencies]
apprise = [
    "apprise >=1.10.0",
    'pywin32>=311; platform_system == "Windows"',
    'tzdata>=2025.3; platform_system == "Windows"'
]

[project.scripts]
cyberdrop-dl = "cyberdrop_dl.__main__:main"
cyberdrop-dl-patched = "cyberdrop_dl.__main__:main"

[project.urls]
Changelog = "https://github.com/Cyberdrop-DL/cyberdrop-dl/blob/main/CHANGELOG.md"
Funding = 'https://github.com/sponsors/jbsparrow'
Issues = "https://github.com/Cyberdrop-DL/cyberdrop-dl/issues"
Repository = "https://github.com/Cyberdrop-DL/cyberdrop-dl"

[build-system]
build-backend = "uv_build"
requires = ["uv_build>=0.11.14"]

[dependency-groups]
dev = [
    "prek>=0.4.3",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.1.0",
    "pytest>=9.0.3",
    "ruff>=0.15.13"
]

[tool.basedpyright]
ignore = ["cyberdrop_dl/dependencies/browser_cookie3.py"]
include = ["cyberdrop_dl", "scripts", "tests"]
reportExplicitAny = false
reportImplicitAbstractClass = false
reportImplicitOverride = "hint"
reportImplicitStringConcatenation = false
reportImportCycles = "warning"
reportUnreachable = "hint"
reportUnusedCallResult = false
typeCheckingMode = "recommended"

[tool.coverage.report]
exclude_also = [
    '@(abc\.)?abstractmethod',
    'class .*\bProtocol\):',
    'if __name__ == .__main__.:',
    'if TYPE_CHECKING:'
]

[tool.coverage.run]
omit = [
    "cyberdrop_dl/crawlers/*",
    "tests/*"
]

[tool.pytest.ini_options]
addopts = ["--tb=short", "-ra", "-s", "-v"]
asyncio_default_fixture_loop_scope = "session"
asyncio_default_test_loop_scope = "session"
asyncio_mode = "auto"
filterwarnings = [
    "error"
]
markers = [
    "crawler_test_case: tests that do full run with a crawler (making actual network requests)"
]
minversion = "8.4.1"
strict_config = true
strict_markers = true

[tool.ruff]
exclude = ["cyberdrop_dl/dependencies/browser_cookie3.py"]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = [
    "ALL"
]
extend-safe-fixes = [
    "TC"  # move import from and to TYPE_CHECKING blocks
]
ignore = [
    "ANN",  # flake8-annotations
    "COM812",  # missing-trailing-comma
    "D",  # Documentation
    "E501",  # suppress line-too-long, let formatter decide
    "EM",  # flake8-errmsg
    "FIX002",  # line-contains-todo
    "FLY002",  # static-join-to-f-string
    "G004",  # logging-f-string
    "N806",  # uppercase variables in functions
    "PLC0415",  # import-outside-top-level
    "PLR2004",  # magic-value-comparison
    "PLW2901",  # redefined-loop-name
    "RET503",  # implicit-return
    "S101",  # assert
    "S110",  # try-except-pass
    "S311",  # suspicious-non-cryptographic-random-usage
    "S603",  # subprocess-without-shell-equals-true
    "S607",  # start-process-with-partial-path
    "SIM105",  # suppressible-exception
    "SLF001",  # private-member-access
    "TD",  # flake8-todos
    "TRY003",  # raise-vanilla-args
    "TRY400"  # error-instead-of-exception
]

[tool.ruff.lint.flake8-boolean-trap]
extend-allowed-calls = ["cyberdrop_dl.logs._enter_context"]

[tool.ruff.lint.flake8-tidy-imports.banned-api]
"typing.override".msg = "Use typing_extensions.override instead."

[tool.ruff.lint.per-file-ignores]
"**/{tests,docs,scripts}/*" = [
    "E402",  # imports not at the top of the file.
    "INP001",  # implicit-namespace-package
    "PT011",  # pytest-raises-too-broad
    "T20"  # flake8-print
]
"__init__.py" = ["E402"]  # imports not at the top of the file.
"tests/crawlers/test_cases/*" = [
    "RUF001"  # String contains ambiguous chars.
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.tomlsort]
all = true
ignore_case = true
in_place = true
sort_first = ["name", "project", "select"]
spaces_before_inline_comment = 2
spaces_indent_inline_array = 4

[tool.uv]
default-groups = "all"
required-version = ">=0.11.14"

[tool.uv.build-backend]
module-name = ["cyberdrop_dl"]
module-root = ""
source-include = ["CHANGELOG.md"]
